--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="perspective wrapper">
     <h1 class="font effect" id="Title">...</h1>
-    <button>Generate</button>
+    <button>Generate!</button>
   </div>
   <script src="js/index.js"></script>
 </body>
