--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Random Front End Job Title Generator</title>
   </head>
   <body>
@@ -12,6 +12,6 @@
       <h1 class="font effect" id="Title">...</h1>
       <button>Generate</button>
     </div>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
