--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Random Front End Job Title Generator</title>
   </head>
-  <body>
+  <body class="body">
     <div class="perspective wrapper">
       <h1 class="font effect" id="Title">...</h1>
-      <button>Generate</button>
+      <button class="button">
+        <svg id="refreshIcon" version="1.1" viewBox="0 0 490.56 490.56" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+          <path d="m331 128.77c-2.1 11.4 5.2 21.8 16.6 23.9l102 17.7c12.1 1.9 20.1-6.6 22.9-17.7l17.7-102c2.1-11.4-5.2-21.8-16.6-23.9s-21.8 5.2-23.9 16.6l-9 54.7c-45.7-60.7-117.9-97.8-195.8-97.9-146.7 0-243.9 116.3-244.9 244.9-0.5 65.4 49.8 232.9 244.8 244.8 195.2 11.9 244.8-179.4 244.8-244.8 0-11.3-9.2-20.5-20.5-20.5s-20.5 9.2-20.5 20.5c0 112.4-91.4 203.8-203.8 203.8s-203.8-91.4-203.8-203.8 91.4-203.8 203.8-203.8c63.9 0 123.3 30.1 161.4 79.3l-51.2-8.5c-11.5-2.1-21.9 5.2-24 16.7z" />
+        </svg>
+      </button>
     </div>
     <script src="js/index.js"></script>
   </body>
